--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -26,7 +26,7 @@
 
       <%= render 'lesson_nav_section' %>
 
-      <%= render partial: '/submissions/for_lesson' if @submission_form == true %>
+      <%= render partial: '/submissions/for_lesson' if @submission_form %>
 
       <%= render partial: '/questions/for_lesson' %>
 
