--- a/app/views/html_css_lessons/lessons/lesson_3.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_3.html.erb
@@ -1,67 +1,6 @@
 <h1><%= title_for(HtmlCssLesson, 2, 1) %></h1>
 
-<p>
-	Now that you understand the fundamentals of HTML and CSS, let's jump right into installing and using an actual web development environment.
-</p>
-
-<p>
-	<strong>Coding in an actual web development environment will be completely different from doing tutorial lessons in the browser like you did in the Dash lessons.</strong> You're going to be making more mistakes and you're going to encounter bugs and problems in your code more often. However, this is completely normal and this is also what happens in the real world.
-</p>
-
-<p>
-  Let's go ahead and install 2 essential tools that are essential for web developers.
-</p>
-
-<h3>Sublime Text Editor</h3>
-<p>
-  There are lots of text editors, but we're going to recommend that you use Sublime Text. Sublime is a great text editor that makes code easier to read with features like syntax highlighting, indentation, multiple line editing, and many more super useful features.
-</p>
-
-<ul>
-  <li>Google search for "Sublime Text Editor"</li>
-  <li>Find the link to download Sublime Text</li>
-  <li>Install Sublime Text into your System</li>
-</ul>
-
-<p>
-  If you encounter a problem, it is important to first Google the problem. <strong>Skilled web developers are also skilled Googlers.</strong>
-</p>
-
-<h3>Google Chrome</h3>
-
-<p>
-  The next thing you need to download is Google Chrome. Google Chrome is a popular web browser amongst web developers. This is because it comes with a tool called Google Developer Tools. Google Developer Tools enables you to do things like typing in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that are useful when developing websites.
-</p>
-
-<p>
-  Again, if you don't have this installed already, let's go to our web browser and search for "google chrome" and find a download link.
-</p>
-
-<h3>GitHub</h3>
-<p>
-  The last thing we want to do is to create a GitHub account.
-</p>
-
-<ul>
-  <li>Go to the GitHub home page</li>
-  <li>Find the sign up button</li>
-  <li>Log into your account</li>
-</ul>
-
-<p>
-  In the following lesson, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
-</p>
-
-<hr>
-
-<p>
-  Cool! That's all we need for now.
-</p>
-
-<p>
-  In the next lesson, we're going to be building a simple one page personal resume website with HTML and CSS using these web development tools. So let's go ahead and build our first real website.
-</p>
-
-
-
-
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/jJuHQNULXGs" frameborder="0" allowfullscreen></iframe>
+</div>
