--- a/app/views/html_css_lessons/lessons/lesson_5.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_5.html.erb
@@ -1,36 +1,6 @@
-<h1><%= title_for(HtmlCssLesson, 3, 1) %></h1>
+<h1><%= title_for(HtmlCssLesson, 2, 3) %></h1>
 
-<p>
-  Congratulations on finishing the pre-work assignments!
-</p>  
-
-<p>
-  Once you are admitted into TECHRISE, <strong>the difficulty of lessons will increase dramatically.</strong> You will be asking more and more questions to your mentor and to your fellow students, and <strong>you will be learning at a much quicker speed.</strong>
-</p>  
-
-<h3>Next Steps</h3>
-
-<p>
-  We will next schedule an interview session to see if TECHRISE is right for you. During your interview, if you have any questions or concerns, please let us know.
-</p>
-
-<p> 
-  We only accept motivated students to join TECHRISE. This is to build and maintain a positive and active community.
-</p>
-
-<p>
-  <strong>We will be emailing you about the next steps over the next couple of weeks.</strong> If you are admitted into TECHRISE, you will have access to many things including:
-</p>
-
-<ul>
-  <li>1 on 1 Mentor Sessions</li>
-  <li>Office Hours</li>
-  <li>An online community where you can ask questions any time</li>
-</ul>
-
-<p>
-  Congratulations on coming this far and we hope to see you soon!
-</p>
-
-
-<% @submissions = false %>
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/2gyHLJeBPCw" frameborder="0" allowfullscreen></iframe>
+</div>
