--- a/app/views/html_css_lessons/lessons/lesson_4.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_4.html.erb
@@ -1,57 +1,67 @@
 <h1><%= title_for(HtmlCssLesson, 2, 2) %></h1>
 
-<!-- 16:9 aspect ratio -->
-<div class="embed-responsive embed-responsive-16by9 embed_video">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XMykJm_3Njw"></iframe>
-</div>
-
 <p>
-  In this lesson, we're going to walk you through the steps of building a simple personal resume website. The point of this video is not really to teach you how HTML and CSS work, but to <strong>teach you the thought process of a web developer.</strong>
+	Now that you understand the fundamentals of HTML and CSS, let's jump right into installing and using an actual web development environment.
 </p>
 
 <p>
-  You'll notice how when faced with a problem, <strong>I quickly Google the question I have to get the answers I want.</strong> You'll also notice that you don't really have to memorize anything if you take this approach. You'll start to see that <strong>coding isn't scary</strong> if all you have to do when you get stuck is look for answers on Google.
+	<strong>Coding in an actual web development environment will be completely different from doing tutorial lessons in the browser like you did in the Dash lessons.</strong> You're going to be making more mistakes and you're going to encounter bugs and problems in your code more often. However, this is completely normal and this is also what happens in the real world.
 </p>
 
 <p>
-  While watching this video and building out the website yourself, <strong>try to imitate the thought process that I go through.</strong> I really want you to see how I approach solving problems when I am stuck.
+  Let's go ahead and install 2 essential tools that are essential for web developers.
+</p>
+
+<h3>Sublime Text Editor</h3>
+<p>
+  There are lots of text editors, but we're going to recommend that you use Sublime Text. Sublime is a great text editor that makes code easier to read with features like syntax highlighting, indentation, multiple line editing, and many more super useful features.
+</p>
+
+<ul>
+  <li>Google search for "Sublime Text Editor"</li>
+  <li>Find the link to download Sublime Text</li>
+  <li>Install Sublime Text into your System</li>
+</ul>
+
+<p>
+  If you encounter a problem, it is important to first Google the problem. <strong>Skilled web developers are also skilled Googlers.</strong>
+</p>
+
+<h3>Google Chrome</h3>
+
+<p>
+  The next thing you need to download is Google Chrome. Google Chrome is a popular web browser amongst web developers. This is because it comes with a tool called Google Developer Tools. Google Developer Tools enables you to do things like typing in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that are useful when developing websites.
 </p>
 
 <p>
-  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". 
+  Again, if you don't have this installed already, let's go to our web browser and search for "google chrome" and find a download link.
+</p>
+
+<!-- <h3>GitHub</h3>
+<p>
+  The last thing we want to do is to create a GitHub account.
+</p>
+
+<ul>
+  <li>Go to the GitHub home page</li>
+  <li>Find the sign up button</li>
+  <li>Log into your account</li>
+</ul>
+
+<p>
+  In the following lesson, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
+</p>
+ -->
+<hr>
+
+<p>
+  Cool! That's all we need for now.
 </p>
 
 <p>
-  For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find it and jump to the word on the website for you.
+  In the next lesson, we're going to be building a simple one page personal resume website with HTML and CSS using these web development tools. So let's go ahead and build our first real website.
 </p>
 
-<p>
-  On this page, we can upload code snippets to show other people. We're going to use this for code submissions. Give it some kind of description in the box where it says "Gist description", and add a filename with the extension. What this means is if you want to save it as an HTML file, your file name should be "YourFileName.html" instead of just "YourFileName". Underneath where you typed in your file name, copy and paste your code. 
-</p>
 
-<p>
-  Since we have two files for this project, we're going to want to add another file. To do that, we click the "Add File" button underneath where you just copied and pasted your code. This will add another set of fields.
-</p>
 
-<%= image_tag 'gist.png', class: 'screenshot' %>
-
-<p>
-  Once you're all done, click the button that says "Create public gist" and you're all done! Once you've done that, click on the tab that says "Embed" which will bring down a drop down menu. Select "Share", then copy and paste the URL that is shown.
-</p>
-
-<%= image_tag 'gist_share.png', class: 'screenshot' %>
-
-<p>
-  Finally to submit, <strong>go to the submissions page below and paste in that URL :)</strong>
-</p>
-
-<p>
-  Awesome work! You're starting to get the hang of HTML and CSS. Let's keep moving.
-</p>
-
-<br>
-
-<br class = "clear">
-
-<% @submission_form = true %>
 
