--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -1,17 +1,16 @@
 <ul class="question_list">
-  <% user = User.find(submission.user_id) %>
 
   <li class="question_container">
     <div class="row">
       <div class="col-xs-10 col-sm-4">
-        <%= image_tag user.avatar, class: 'community_prof_pic', style: "margin-top: 40px;" %>
+        <%= image_tag submission.user_avatar, class: 'community_prof_pic', style: "margin-top: 40px;" %>
       </div><!-- col-xs-12 col-sm-4 -->
 
       <div class="col-xs-12 col-sm-6">
         <div class="submission_content">
           <h5 class="question_container_title"><%= link_to submission.title, submission_path(submission) %></h5>
           <div class="question_container_information">
-            <span class="question_container_time"><%= time_ago_in_words(submission.created_at) %> ago</span> by <span class="question_container_user"><%= user.name %></span>
+            <span class="question_container_time"><%= time_ago_in_words(submission.created_at) %> ago</span> by <span class="question_container_user"><%= submission.user_name %></span>
           </div><!-- question_container_information -->
         </div><!-- submission_content -->
       </div><!-- col-xs-12 col-sm-2 -->
