--- a/app/views/questions/_for_lesson.html.erb
+++ b/app/views/questions/_for_lesson.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h3 class="question-header mentee_title text-center"><span class="back_to_dashboard"><%= link_to '<i class="fa fa-question-circle" aria-hidden="true"></i> Ask Question'.html_safe, new_question_path(course_name: controller_name.classify, lesson_id: params[:id]), class: 'btn btn-back btn-default' %></span> Questions</h3>
+      <h3 class="question-header mentee_title text-center">Questions</h3>
     </div>
   </div>
 
