add master deck

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
  *= require_tree .
  *= stub "foundation"
  */
+@import "bourbon";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "summernote";
+
