--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -1,3 +1,54 @@
-// Place all the styles related to the decks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.deck {
+  background: white;
+  padding: 10px 20px;
+  border-radius: 4px; 
+  h4 {
+    text-align: center;
+    font-weight: 600;
+    font-family: 'Lato';
+  }
+  .flashcards-count {
+      position: absolute;
+      right: 3em;
+      bottom: 0.9em;
+      font-size: 1rem;
+      margin-bottom: 0;
+  }
+  .deck-title a {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    min-height: 8em;
+  }
+}
+
+.deck-title {
+  font-weight: 600;
+}
+
+.flashcard-position {
+  position: absolute;
+  top: 3em;
+  right: 3em;
+  font-weight: 600;
+  color: #999;
+}
+
+.answer-box {
+  display: none;
+  border: 2px solid #ec6952;
+}
+
+h4.intro {
+  font-weight:600;
+  color: #777;
+}
