--- a/app/views/layouts/study.html.erb
+++ b/app/views/layouts/study.html.erb
@@ -23,7 +23,7 @@
           <div class="col-xs-12">
             <ul class="nav nav-tabs">
               <li role="presentation"><%= link_to 'Home', study_path %></li>
-              <li role="presentation"><%= link_to 'All Cards', cards_path %></li>
+              <li role="presentation"><%= link_to 'Your Cards', cards_path %></li>
               <li role="presentation"><%= link_to 'Master Decks', decks_path %></li>
             </ul>
           </div><!-- col-xs-12 -->
