--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -5,8 +5,12 @@
 .handle {
   position: fixed;
   width: 50px;
-  height: 100%;
+  top: 130px;
   right: 0px;
+}
+
+.fixed-handle {
+  top: 30px;
 }
 
 .check_answer {
