--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -21,6 +21,12 @@
   max-height: 100vh !important;
 }
 
+.fixed-sidebar {
+  position: fixed !important;
+  top: 10px;
+  width: 100vh;
+}
+
 .affix {
     bottom: 80px;
     top: 140px;
@@ -41,7 +47,7 @@
 #sidebar {
   padding-right: 0;
   padding-top: 20px;
-  width: 16%;
+  position: relative;
 }
 #sidebar .nav {
   max-width: 95% !important;
