--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,17 +1,25 @@
-<ul id="sidebar" class="nav nav-stacked pre-scrollable affix" data-offset-bottom="578">
-      <%= link_to '< All Courses', courses_path %>
-      <h3><%= @course_title %></h3>
-      <% @lessons.each do |chapter| %>
+<ul id="sidebar" class="nav nav-stacked pre-scrollable">
+  <%= link_to '< All Courses', courses_path %>
+  <h3><%= @course_title %></h3>
+  <% @lessons.each_with_index do |chapter, i| %>
 
-        <li><h5><%= chapter[0] %></h5></li>
+    <li>
+      <h5>
+        <a role="button" data-toggle="collapse" href="#chapter_<%= i %>" aria-expanded="false" data-target="chapter_<%= i %>" aria-controls="chapter_<%= i %>">
+          <%= chapter[0] %>
+        </a>
+      </h5>
+    </li>
 
-        <% chapter[1].each do |lesson| %>
-          <% if controller_name.classify == "Progression" %>
-            <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(lesson[0], params[:progression][:course_name])}".html_safe, "/#{@lesson_link}/#{(lesson[0])}" %></li>
-          <% else %>
-            <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(lesson[0])}".html_safe, "/#{@lesson_link}/#{(lesson[0])}" %></li>
-          <% end %>
+    <div class="collapse" id="chapter_<%= i %>">
+      <% chapter[1].each do |lesson| %>
+        <% if controller_name.classify == "Progression" %>
+          <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(lesson[0], params[:progression][:course_name])}".html_safe, "/#{@lesson_link}/#{(lesson[0])}" %></li>
+        <% else %>
+          <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(lesson[0])}".html_safe, "/#{@lesson_link}/#{(lesson[0])}" %></li>
         <% end %>
-
       <% end %>
+    </div>
+
+  <% end %>
 </ul>
