--- a/app/views/layouts/_nav_lessons.html.erb
+++ b/app/views/layouts/_nav_lessons.html.erb
@@ -1,3 +1,3 @@
-<header id="header" class="header scrolled_nav">  
+<header id="header" class="header scrolled_nav lesson-nav">  
     <%= render '/layouts/nav_contents' %>
 </header><!--//header-->
