--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -10,9 +10,11 @@
 <div class="row">
   <!-- sidebar -->
   <div class="col-lg-3 visible-lg">
+    <div style="width: 100%">
       <div id="sidebar_container">
         <%= render 'sidebar' %>
       </div>
+    </div>
   </div>
 
   <div class="col-lg-9 col-md-12">
@@ -40,56 +42,15 @@
 
 <script type="text/javascript">
 
-$(function(){
-  // lock lesson nav
-  var windw = this;
-  var pos;
-
-  $.fn.followTo = function ( elem ) {
-    var $this = this,
-        $window = $(windw),
-        $bumper = $(elem),
-        bumperPos = $bumper.offset().top,
-        thisHeight = $this.outerHeight(),
-        setPosition = function(){
-            if ($window.scrollTop() > (bumperPos - thisHeight)) {
-                $this.css({
-                    position: 'absolute',
-                    top: (bumperPos - thisHeight)
-                });
-            } else {
-                $this.css({
-                    position: 'fixed',
-                    top: 0
-                });
-            }
-        };
-      $window.resize(function()
-      {
-          bumperPos = pos.offset().top;
-          thisHeight = $this.outerHeight();
-          setPosition();
-      });
-      $window.scroll(setPosition);
-      setPosition();      
-  };
-
-  $('#header').followTo('#sidebar_container');
-
-  $('#header').followTo('#slider');
-})
-
 var wrap = $("#wrap");
-var sidebar = $("#sidebar");
+var sidebar = $("#sidebar_container");
 var handle = $(".handle");
 
 $(document).bind('scroll', function() {
-   if ($(window).scrollTop() > 10) {
-    sidebar.addClass("fixed-sidebar");
-    handle.addClass("fixed-handle");
+  if (76 - $(window).scrollTop() >= 0) {
+    sidebar.css("top", 76 - $(window).scrollTop());  
   } else {
-    sidebar.removeClass("fixed-sidebar");
-    handle.removeClass("fixed-handle");
+    sidebar.css("top", 0);
   }
 });
 
@@ -103,6 +64,14 @@ $('ul.nav a[href="'+ url +'"]').parent().addClass('active');
 $('ul.nav a').filter(function() {
     return this.href == url
 }).parent().addClass('active');
+
+$('ul.nav a').filter(function() {
+    return this.href == url
+}).parent().parent().addClass('collapse in');
+
+$('ul.nav a').filter(function() {
+    return this.href == url
+}).parent().parent().parent().closest('li').find('a').addClass('collapsed')
 
 // scroll to current lesson
 var ready;
