--- a/app/views/progressions/destroy.js.erb
+++ b/app/views/progressions/destroy.js.erb
@@ -30,7 +30,7 @@ $('ul.nav a').filter(function() {
 
 $('ul.nav a').filter(function() {
     return this.href == url
-}).parent().parent().addClass('collapse in');
+}).parent().parent().parent().closest('li').find('a').attr('aria-expanded', 'true');
 
 // scroll to current lesson
 var ready;
