--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -60,7 +60,7 @@
 
               <div class="row" style="margin-top:20px;">
                 <div class="col-xs-12">
-                  <h3><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> Continue Lesson'.html_safe, get_lesson_url_string(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]), class: 'btn btn-cta-primary' %></h3>
+                  <h3><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> Continue Lesson'.html_safe, get_lesson_url_string(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]), class: 'btn btn-cta-primary btn-block' %></h3>
                 </div>
               </div><!-- row -->
             </div><!-- col-xs-12 col-md-6 col-md-offset-3 -->
