--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -2,6 +2,7 @@
   background: white;
   padding: 10px 20px;
   border-radius: 4px; 
+  margin-top: 30px;
   h4 {
     text-align: center;
     font-weight: 600;
