--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -19,6 +19,8 @@
 
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js"></script>
+
 <meta name="google-site-verification" content="R3LOLk39gjNUL80jKUvXPImniRdCdohSRRHTG80B6gg" />
 
 <!-- facebook Open Graph -->
