--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -13,7 +13,11 @@
   top: 30px;
 }
 
-.check_answer {
-  display: none;
-}
 
+#check_answer {
+  visibility: hidden;
+  opacity: 1;
+  -webkit-transition: visibility 0.5s linear 1s, opacity 800ms;
+  -moz-transition: visibility 0.5s linear 1s, opacity 800ms;
+  transition: visibility 0.5s linear 1s, opacity 800ms;
+}
