fix lesson p tags

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -371,6 +371,11 @@ span.radio.inline {
     font-size: 18px;
     margin: 5px 0px;
   }
+  p {
+    font-size: 17px;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+  }
 }
 
 .item .content p {
