--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
     <br>
 
     <div class="step text-center col-md-4 col-sm-4 col-xs-12">
-       <h3 class="title"><span class="number">1</span><br /><span class="text">Complete our Pre-work Course</span></h3>
+       <h3 class="title"><span class="number">1</span><br /><span class="text">Complete our<br>Pre-work Course</span></h3>
        
     </div><!--//step-->
     <div class="step text-center col-md-4 col-sm-4 col-xs-12">
@@ -102,7 +102,7 @@
       
       <br>
       <div class="actions">
-        <%= f.submit "Sign up", class: 'btn btn-block btn-cta-primary btn-lg' %>
+        <%= f.submit "Start Coding", class: 'btn btn-block btn-cta-primary btn-lg', data: { disable_with: "Creating account..." } %>
       </div>
     <% end %>
 
