--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,6 +30,7 @@
                         <ul class="social list-inline">
                             <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
                             <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.twitter.com/techrisenepal"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
                             <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->        
                             <!-- <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li> -->             
