--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -172,7 +172,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><%= link_to 'SIGN UP FOR PRE-WORK', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
+        <div class="text-center"><%= link_to 'Start Your Web Development Career', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
