--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,6 +2,28 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.profile img {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.testimonial-card {
+  .source {
+    text-align: center;
+  }
+  .content {
+    padding-top: 20px;
+  }
+}
+
+.read-more {
+  text-align: center;
+  font-weight: 600;
+}
+
 .curriculum-cta {
   margin-top: 50px;
   background: whitesmoke;
