--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -96,12 +96,17 @@
                 <% else %>
 
                     <li class="nav-item page-scroll">
-                      <a href="/contact_us">Contact Us</a>
+                      <a href="/curriculum">Curriculum</a>
                     </li>
 
                     <li class="nav-item page-scroll">
-                      <a href="/support">Support Us</a>
+                      <a href="/learn">Learn More</a>
                     </li>
+                    
+                    <li class="nav-item page-scroll">
+                      <a href="/pricing">Pricing</a>
+                    </li>
+
 
                     <li class="nav-item page-scroll">
                       <a href="/blog">Blog</a>
@@ -111,20 +116,16 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">About TECHRISE <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li>
-                              <a href="/curriculum">Curriculum</a>
-                            </li>
-
-                            <li>
-                              <a href="/learn">Learn More</a>
-                            </li>
-
-                            <li>
-                              <a href="/pricing">Pricing</a>
-                            </li>
-
-                            <li>
                               <a href="/about">About</a>
                             </li>
+
+                            <li>
+                              <a href="/contact_us">Contact Us</a>
+                            </li>
+
+                            <li>
+                              <a href="/support">Support Us</a>
+                            </li>                            
 
                             <li>
                               <a href="/events">Events</a>
@@ -139,7 +140,7 @@
                 </li>
 
                 <% unless user_signed_in? %>
-                    <li class="nav-item nav-item-cta last"><%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-cta btn-cta-secondary' %></li>
+                    <li class="nav-item nav-item-cta last"><%= link_to 'APPLY', new_user_registration_path, class: 'btn btn-cta btn-cta-secondary' %></li>
                 <% end %>
 
             </ul><!--//nav-->
