--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -249,7 +249,7 @@
                     </p>
                     </blockquote>
 
-                     <h3 class="read-more">Read about Swojeet's first month at TECHRISE <a href="https://swojeet.github.io/swojeetkayastha_blog/2016/08/31/welcome-to-jekyll.html" target="_blank">here</a>.</h3>
+                     <h3 class="read-more"><a href="https://swojeet.github.io/swojeetkayastha_blog/2016/08/31/welcome-to-jekyll.html" target="_blank">Read about Swojeet's first month at TECHRISE</a></h3>
                     
                     
                 </div><!--//content--> 
@@ -321,7 +321,7 @@
                     </p>
                     </blockquote>
 
-                    <h3><a class="read-more">Read about Rina's first month at TECHRISE <a href="http://www.rinabaral.com.np/2016/08/23/first-month-at-techrise-ruby-on-rails-bootcamp/" target="_blank">here</a>.</h3>
+                    <h3 class="read-more"><a href="http://www.rinabaral.com.np/2016/08/23/first-month-at-techrise-ruby-on-rails-bootcamp/" target="_blank">Read about Rina's first month at TECHRISE</a></h3>
                     
                 </div><!--//content-->       
               </div><!-- testimonial-card -->
