add shreejana testimonial

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -47,7 +47,7 @@
                   </div><!--//quote-->                        
               </div><!--//content-->
               <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
-                  <%= image_tag 'landing_page/lesson_mac.png', class: 'img-responsive' %>
+                  <%= image_tag 'landing_page/techrise-lesson.png', class: 'img-responsive' %>
                   <figcaption class="figure-caption">Our Online Platform is optimized to Accelerate your Learning</figcaption>
               </figure>
           </div><!--//item-->
@@ -63,11 +63,11 @@
                   
                   <div class="quote">
                       <div class="quote-profile">
-                          <%= image_tag 'landing_page/aadesh.jpg', class: 'img-responsive img-circle' %>
+                          <%= image_tag 'landing_page/shreejana.jpg', class: 'img-responsive img-circle' %>
                       </div><!--//profile-->
                       <div class="quote-content">
-                          <blockquote><p>TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing.</p></blockquote>
-                          <p class="source">Aadesh Shrestha</p>
+                          <blockquote><p>One-on-one mentor sessions are a very strong part of TECHRISE. Whenever I get stuck, my mentor is always there to help me.</p></blockquote>
+                          <p class="source">Shreejana Poudel</p>
                       </div><!--//quote-content-->         
                   </div><!--//quote-->                        
               </div><!--//content-->
