--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,6 +4,8 @@
 
   <%= render '/layouts/meta' %>
 
+  <script src="//load.sumome.com/" data-sumo-site-id="8ff207d6070e2d6e92c0cebe5cbb458ecb431bdd882ded162c2051d853094f21" async="async"></script>
+
 </head>
 
 <body class="blog-page">
